| Summary: | ASTERISK-27042: Unpatched asterisk sources fail to build on FreeBSD due to missing crypt.h file | ||
| Reporter: | Guido Falsi (madpilot) | Labels: | |
| Date Opened: | 2017-06-08 10:29:14 | Date Closed: | 2017-06-12 15:59:09 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Portability |
| Versions: | 13.16.0 14.5.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Any supported FreeBSD branch | Attachments: | |
| Description: | As stated in the subject asterisk expects crypt.h to exist when looking for crypt_r(), but FreeBSD defines this function in unistd.h.
In the FreeBSD port I maintain I patch asterisk for this. I'd like this patch to be included in official asterisk sources. I'm filing a gerrit code review with the patch, and referencing this bug report shortly. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-06-08 10:29:15.219-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-06-12 15:59:10.881-0500 Change 5781 merged by Joshua Colp: BuildSystem: Fix build on FreeBSD due to missing crypt.h [https://gerrit.asterisk.org/5781|https://gerrit.asterisk.org/5781] By: Friendly Automation (friendly-automation) 2017-06-12 16:30:04.112-0500 Change 5782 merged by Joshua Colp: BuildSystem: Fix build on FreeBSD due to missing crypt.h [https://gerrit.asterisk.org/5782|https://gerrit.asterisk.org/5782] By: Friendly Automation (friendly-automation) 2017-06-12 16:35:35.819-0500 Change 5783 merged by Jenkins2: BuildSystem: Fix build on FreeBSD due to missing crypt.h [https://gerrit.asterisk.org/5783|https://gerrit.asterisk.org/5783] | ||